--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -61,3 +61,15 @@ h1 {
     width: 100%;
   }
 }
+/*button*/
+.button {
+	text-decoration:none;
+	border: none;
+  background-color: white;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 12px;
+  cursor: pointer;}
+
