--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -73,3 +73,16 @@ h1 {
   font-size: 12px;
   cursor: pointer;}
 
+.fa {
+  padding: 10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
